Multiple changes, see description.
1) Fixed warning MSB3276 during build.
2) Added a config system and file to the  bot modules,
access it by using GetConfig() and SaveConfig()
3) Fixed modulepath
4)  storagepath for file storage in bot modules
5) Added a config api to CMD-R
6) Added ASMLD for assembly injection to CMD-R (via program arguments)
7) Added --enable-debug and --disable-debug arguments (needed for ASMLD)
8) Added config directories for embedded/injected modules
9) TODO: Config saving
10) LoadBotModule function
(called by both modules from directory and packages)
11) Module packages system (no builder yet, modules have patch versions)
12) Unintended clean of formatting in Program.cs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,7 @@
         {
             "name": "Launch CMD-R",
             "type": "mono",
+            "preLaunchTask": "build",
             "request": "launch",
             "program": "${workspaceRoot}/CMD-R/bin/Debug/CMD-R.exe",
             "console": "integratedTerminal",
