Switch to DotNet Core

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,21 +6,14 @@
     "configurations": [
         {
             "name": "Launch CMD-R",
-            "type": "mono",
-            "preLaunchTask": "build",
+            "type": "coreclr",
             "request": "launch",
-            "program": "${workspaceRoot}/CMD-R/bin/Debug/CMD-R.exe",
-            "console": "integratedTerminal",
-            "cwd": "${workspaceRoot}"
-        },
-        {
-            "name": "Launch CCFG Tests",
-            "type": "mono",
             "preLaunchTask": "build",
-            "request": "launch",
-            "program": "${workspaceRoot}/ACA.CCFG.Testing/bin/Debug/ACA.CCFG.Testing.exe",
-            "console": "integratedTerminal",
-            "cwd": "${workspaceRoot}"
+            "program": "${workspaceFolder}/CMD-R/bin/Debug/net5.0/CMD-R.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "console": "integratedTerminal"
         }
     ]
 }
